v.1.0.7

- Changed affix datapacks to require tags instead of specific base gears.
This should make it much easier to add new base gears now!
- int now gives mana regen too


v.1.0.6

* added help button on EVERY gui or station that needs it! 
It will explain what the block is used for. Should help newbies a lot.
* made jewel socketing more informative
* if pvp is disabled magic shield should no longer bypass pvp checks
* changed buff spells to require any weapon, instead of mage weapons
* reduced level penalty a bit
* upped default gear drops a bit
* decreased default stat scalings

v1.0.5

Backup world before update! I added some code to retrieve the spells from hotbar but it might not work.

* spell hotbar setup is now an inventory, and should be much more intuitive.
* you can now switch spells with middle mouse scrolling! (when pressing R)
* switched to vanilla bows, there were arrow render problems (i think vanilla hardcoded them..)
* spells now correctly require bows or melee (for arrow spells and melee spells) currently only 1 melee spell
* compatible items should now be able to cast spells
* jewels now more likely to drop as a lower level, to allow easier socketing
* dodge now no longer works on elemental damage. It's now in line with armor.
* orb of transmutation now easier to craft
* fixed spell mana tooltips being wrong
* fix judgement effect not doing damage

v.1.0.4

Mod now requires library: Library of Exile

Goal of the library is to try to allow some of the features I make to be playable without Age of Exile.
For example, if I wanted to make a dimension, I could make it as a separate mod and then use my library to add Age of Exile support.
And also to house some widely used utilities.

A separate mod has been created to house my controversial balance changes: Balance of Exile.
This currently contains the enviromental damage check and anti mob farm system. 

This is my first time making a library, so I expect some bugs.
