@@ -4,17 +4,14 @@ import com.google.gson.JsonObject;
 import com.robertx22.mine_and_slash.datapacks.JsonUtils;
 import com.robertx22.mine_and_slash.datapacks.bases.ISerializable;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static com.robertx22.mine_and_slash.database.data.gearitemslots.bases.BaseGearType.SlotTag;
 
 public class TagList implements ISerializable<TagList> {
 
-    public List<String> tags;
+    public Set<String> tags;
 
     public boolean contains(String tag) {
         return tags.contains(tag);
@@ -45,11 +42,11 @@ public class TagList implements ISerializable<TagList> {
     public TagList(List<SlotTag> tags) {
         this.tags = tags.stream()
             .map(x -> x.name())
-            .collect(Collectors.toList());
+            .collect(Collectors.toSet());
     }
 
     public TagList(SlotTag... tags) {
-        this.tags = new ArrayList<>();
+        this.tags = new HashSet<>();
         for (SlotTag tag : tags) {
             this.tags.add(tag.name());
         }
@@ -58,7 +55,7 @@ public class TagList implements ISerializable<TagList> {
     @Override
     public JsonObject toJson() {
         JsonObject json = new JsonObject();
-        json.add("tags", JsonUtils.stringListToJsonArray(this.tags));
+        json.add("tags", JsonUtils.stringListToJsonArray(new ArrayList<>(this.tags)));
 
         return json;
     }
@@ -66,7 +63,9 @@ public class TagList implements ISerializable<TagList> {
     @Override
     public TagList fromJson(JsonObject json) {
         TagList list = new TagList();
-        list.tags = JsonUtils.jsonArrayToStringList(json.getAsJsonArray("tags"));
+
+        List<String> l = JsonUtils.jsonArrayToStringList(json.getAsJsonArray("tags"));
+        list.tags = new HashSet<>(l);
         return list;
 
     }
