@@ -39,7 +39,7 @@ public class OccultistRobes extends BaseBoots {
 
     @Override
     public TagList getTags() {
-        return new TagList(SlotTag.cloth, SlotTag.chest, SlotTag.magic_shield_stat, SlotTag.intelligence);
+        return new TagList(SlotTag.cloth, SlotTag.chest, SlotTag.armor_family, SlotTag.magic_shield_stat, SlotTag.intelligence);
     }
 
     @Override
