@@ -40,7 +40,7 @@ public class SorcererCirclet extends BaseBoots {
 
     @Override
     public TagList getTags() {
-        return new TagList(SlotTag.cloth, SlotTag.helmet, SlotTag.magic_shield_stat, SlotTag.intelligence);
+        return new TagList(SlotTag.cloth, SlotTag.helmet, SlotTag.armor_family, SlotTag.magic_shield_stat, SlotTag.intelligence);
     }
 
     @Override
