@@ -53,7 +53,7 @@ public class LifeRing extends BaseCurio {
 
     @Override
     public TagList getTags() {
-        return new TagList(SlotTag.ring);
+        return new TagList(SlotTag.ring, SlotTag.jewelry_family);
     }
 
     @Override
