@@ -44,7 +44,7 @@ public class HolyScepter extends BaseWeapon {
 
     @Override
     public TagList getTags() {
-        return new TagList(SlotTag.mage_weapon, SlotTag.wand, SlotTag.melee_weapon, SlotTag.intelligence);
+        return new TagList(SlotTag.mage_casting_weapon, SlotTag.mage_weapon, SlotTag.wand, SlotTag.weapon_family, SlotTag.melee_weapon, SlotTag.intelligence);
     }
 
     @Override
