@@ -1,37 +1,43 @@
 package com.robertx22.mine_and_slash.database.data.spells.spell_classes.bases;
 
+import com.robertx22.mine_and_slash.database.data.gearitemslots.bases.BaseGearType;
 import com.robertx22.mine_and_slash.saveclasses.item_classes.GearItemData;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Gear;
 import com.robertx22.mine_and_slash.uncommon.wrappers.SText;
 import net.minecraft.entity.LivingEntity;
-import net.minecraft.item.Item;
-import net.minecraft.item.RangedWeaponItem;
 import net.minecraft.util.Formatting;
 
 import java.util.function.Predicate;
 
 public class SpellPredicates {
     private static Predicate<LivingEntity> SHOOTABLE_PRED = x -> {
-        Item item = x.getMainHandStack()
-            .getItem();
-        return item instanceof RangedWeaponItem;
+        try {
+            GearItemData data = Gear.Load(x.getMainHandStack());
+            return data != null && data.GetBaseGearType()
+                .getTags()
+                .contains(BaseGearType.SlotTag.ranger_casting_weapon);
+        } catch (Exception e) {
+            return false;
+        }
     };
 
     private static Predicate<LivingEntity> MELEE_PRED = x -> {
         try {
             GearItemData data = Gear.Load(x.getMainHandStack());
             return data != null && data.GetBaseGearType()
-                .isMeleeWeapon() && !data.GetBaseGearType()
-                .isMageWeapon();
+                .getTags()
+                .contains(BaseGearType.SlotTag.warrior_casting_weapon);
         } catch (Exception e) {
             return false;
         }
     };
+
     private static Predicate<LivingEntity> MAGE_PRED = x -> {
         try {
             GearItemData data = Gear.Load(x.getMainHandStack());
             return data != null && data.GetBaseGearType()
-                .isMageWeapon();
+                .getTags()
+                .contains(BaseGearType.SlotTag.mage_casting_weapon);
         } catch (Exception e) {
             return false;
         }
